# fastmail-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  util.rs
src/carddav/: mod.rs
src/commands/: auth.rs  contacts.rs  download.rs  forward.rs  get.rs  list.rs  masked.rs  mod.rs  move.rs  read.rs  reply.rs  search.rs  send.rs  spam.rs  thread.rs
src/jmap/: mod.rs
src/mcp/: format.rs  mod.rs
src/models/: mod.rs
