[package]
name = "fastmail-cli"
version = "1.2.0"
edition = "2024"
description = "CLI for Fastmail's JMAP API"
license = "MIT"
repository = "https://github.com/radiosilence/fastmail-cli"
keywords = ["fastmail", "jmap", "email", "cli"]
categories = ["command-line-utilities", "email"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
dirs = "6.0.0"
docx-lite = "0.2.0"
pdf-extract = "0.10.0"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
